hphp/test/slow/unpack_args/unpack_call_multi.php.expectf
Fatal error: The splat operator ('...') for unpacking variadic arguments may only appear at the end of an argument list. in %s/test/slow/unpack_args/unpack_call_multi.php on line 10